# offpkg

./: .gitignore  Cargo.toml  README.md  TODO.md  install.sh  update_offpkg.sh
doc/: architecture.md  contributing.md  modules.md  usage.md
src/: cache.rs  cli.rs  config.rs  db.rs  docs.rs  doctor.rs  main.rs  remove.rs  stacks.rs  tui.rs  update.rs
src/adapters/: bun.rs  flutter.rs  mod.rs  uv.rs
src/stacks/: mod.rs
src/stacks/builtin/: fastapi.rs  flutter.rs  hono.rs  mern.rs  mod.rs  pern.rs  react_vite.rs
