[package]
name = "offpkg"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "offpkg"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP — rustls avoids needing OpenSSL installed on the system
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Tar extraction (for bun .tgz packages)
flate2 = "1.0"
tar = "0.4"

# Checksums
sha2 = "0.10"

# Error handling
anyhow = "1.0"

# Datetime
chrono = { version = "0.4", features = ["serde"] }

# Semantic versioning
semver = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
strip = true